[package]
name = "task_watcher"
version = "0.1.0"
authors = ["VisualSource <boomishere_network@outlook.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winapi = { version = "*", features = ["wincon","shellapi","ntdef"] }
ctrlc = { version = "3.1.9", features = ["termination"] }
json = "0.12.4"
craftping = "0.2.1"
tokio = { version = "1", features = ["full"] }