[package]
name = "task_watcher"
version = "0.1.1"
authors = ["VisualSource <boomishere_network@outlook.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winapi = { version = "*", features = ["wincon","shellapi","ntdef"] }
ctrlc = { version = "3.1.9", features = ["termination"] }
json = "0.12.4"
craftping = "0.2.1"
chrono = "0.4.19"
rand = "0.8.4"
hex = "0.4.3"
byteorder = "1.4.3"
